[package]
name = "final_project"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
sysinfo = "0.30.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }